Fix alignment

--- a/swiggy-app/src/app/home/home.page.scss
+++ b/swiggy-app/src/app/home/home.page.scss
@@ -1,17 +1,71 @@
-.center {
+.headerMargin {
+  margin: 0%;
+  padding: 0%;
+}
+.flex-row {
   display: flex;
-  // align-items: center;
+  flex-direction: row;
+  align-items: center;
+}
+.flex-pad {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
 }
 
-.icon {
-  font-size: 20px;
-  width: 23px;
+.flex-dir {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.mar-top {
+  margin-top: 10px;
+  margin-left: 10px;
+  font-weight: bolder;
+}
+
+.addressAlign {
+  margin-top: 4px;
+  margin-left: 10px !important;
+  margin: 0;
+  font-size: 7px;
+}
+
+.off-width {
+  width: 30%;
+}
+
+.flexEnd {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.mar-right {
+  margin-right: 10px;
 }
 
 .border {
   border-radius: 15px;
 }
 
+.center {
+  display: flex;
+}
+
+.icon {
+  font-size: 20px;
+  width: 23px;
+}
+:host {
+  .background-image {
+    background: url("../../assets/images/food2.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
 .flex {
   display: flex;
   padding: 11px;
@@ -31,157 +85,110 @@
   display: flex;
   flex-direction: column;
 }
+
+
 .text-color {
   color: gray;
 }
-
-.mar-top {
-  margin-top: 10px;
-  margin-left: 10px;
-  font-weight: bolder;
-}
-
-.flex-pad {
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  // align-items: center;
-}
-
-.icon-size {
-  font-size: 21px;
-}
-
-.locationIcon {
-  font-size: 21px;
-  color: orange;
-}
-
 ion-card-title {
   font-weight: 500;
   font-size: 22px;
 }
 
-:host {
-  .background-image {
-    background: url("../../assets/images/food2.jpeg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-}
-:host ::ng-deep {
-  .swiper-wrapper {
-    align-items: center !important;
-    justify-content: center !important;
-  }
-  .margin-size {
-    margin: 0%;
-  }
-  md.margin-size {
-    margin: 0%;
-    margin-top: 10px;
-  }
-  .margin-size-spot {
-    margin: 0%;
-    margin-top: 15px;
-  }
-
-}
-
-.card-size {
-  width: 100%;
-  height: 100px;
-  border-radius: 10px;
-}
-img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.swiper-slide {
-  width: auto;
-}
-
-.ios .align-content {
-  margin-top: -10px;
-  font-size: 16px;
-  float: left;
-  margin-left: 15px;
-  font-weight: 500;
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
-}
-
-.md .align-content {
-  font-weight: 500;
-  margin-top: 10px;
-  font-size: 16px;
-  float: left;
-  margin-left: 15px;
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
-}
-
-.rateimg {
-  font-size: 11px;
-  margin-top: 6px;
-  width: fit-content;
-  margin-left: 15px;
-}
-
-.flex-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.card-popular {
-  border-radius: 50px;
-}
-
-.text-align {
-  margin-left: 10px;
-}
-
-.headerMargin {
-  margin: 0%;
-  padding: 0%;
-}
-
-.flex-dir {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
 
 
-.flexEnd {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
 
 
-.addressAlign {
-  margin-top: 4px;
-  margin-left: 10px !important;
-  margin: 0;
-  font-size: 7px;
-}
 
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
 
-.off-width {
-width: 30%;
-}
 
-.mar-right {
-  margin-right: 10px;
-}
+
+
+
+// .icon-size {
+//   font-size: 21px;
+// }
+
+// .locationIcon {
+//   font-size: 21px;
+//   color: orange;
+// }
+
+
+
+
+// :host ::ng-deep {
+//   .swiper-wrapper {
+//     align-items: center !important;
+//     justify-content: center !important;
+//   }
+//   .margin-size {
+//     margin: 0%;
+//   }
+//   md.margin-size {
+//     margin: 0%;
+//     margin-top: 10px;
+//   }
+//   .margin-size-spot {
+//     margin: 0%;
+//     margin-top: 15px;
+//   }
+// }
+
+// .card-size {
+//   width: 100%;
+//   height: 100px;
+//   border-radius: 10px;
+// }
+// img {
+//   object-fit: cover;
+//   width: 100%;
+//   height: 100%;
+// }
+// .swiper-slide {
+//   width: auto;
+// }
+
+// .ios .align-content {
+//   margin-top: -10px;
+//   font-size: 16px;
+//   float: left;
+//   margin-left: 15px;
+//   font-weight: 500;
+//   display: flex;
+//   flex-direction: column;
+//   width: fit-content;
+// }
+
+// .md .align-content {
+//   font-weight: 500;
+//   margin-top: 10px;
+//   font-size: 16px;
+//   float: left;
+//   margin-left: 15px;
+//   display: flex;
+//   flex-direction: column;
+//   width: fit-content;
+// }
+
+// .rateimg {
+//   font-size: 11px;
+//   margin-top: 6px;
+//   width: fit-content;
+//   margin-left: 15px;
+// }
+
+// .flex-content {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .card-popular {
+//   border-radius: 50px;
+// }
+
+// .text-align {
+//   margin-left: 10px;
+// }
+
+
