--- a/swiggy-app/src/app/spot-light/spot-light.component.scss
+++ b/swiggy-app/src/app/spot-light/spot-light.component.scss
@@ -20,11 +20,18 @@
     .swiper-wrapper {
         align-items: center !important;
         justify-content: center !important;
-        margin-top: -20px;
+        // margin-top: -20px;
     }
     ion-card-subtitle {
         padding: 20px;
         margin-top: -35px;
+        font-size: 10px;
+    }
+    .swiper-container {
+      bottom: 20px;
+    }
+    ion-card-content {
+      padding: 0%;
     }
 }
 
@@ -48,6 +55,7 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
+    color: #000;
   }
   
   .md .align-content {
@@ -59,6 +67,7 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
+    color: #000;
   }
 
   img {
@@ -79,3 +88,28 @@
       flex-direction: column;
   }
   
+  .position {
+    // display: flex;
+    // flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 60px;
+    right: 22px;
+    background: white;
+    width: 97px;
+    height: 30px;
+    border-radius: 5px;
+}
+
+.text-off {
+  font-size: 10px;
+  font-weight: bolder;
+  color: #f94d00;
+
+}
+
+.text-upto {
+font-size: 10px;
+color: #f94d00;
+
+}
