--- a/swiggy-app/src/app/today-features/today-features.component.scss
+++ b/swiggy-app/src/app/today-features/today-features.component.scss
@@ -58,3 +58,10 @@ ion-card {
 ion-card-title {
   font-size: 20px;
 }
+ion-card-content {
+  padding: 0;
+}
+
+.swiper-container {
+  bottom: 20px;
+}
